--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,17 +13,41 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        # jwt:
+        #     lexik_jwt:
+        #         class: App\Entity\User
     firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: app_user_provider
-            json_login:
-                check_path: api_login
-            logout:
-                path: api_logout
+
+        # uncomment for normal json login
+
+        # main:
+        #     lazy: true
+        #     provider: app_user_provider
+        #     json_login:
+        #         check_path: api_login
+
+           
+            # json_login:
+            #     check_path: api_login
+            # logout:
+            #     path: api_logout
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
