auth and token refresh sorted

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,10 @@ security:
         #     lexik_jwt:
         #         class: App\Entity\User
     firewalls:
+        api_token_refresh:
+            pattern: ^/api/token/refresh
+            stateless: true
+            refresh_jwt: ~
         login:
             pattern: ^/api/login
             stateless: true
