auth + registration put to work

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,11 +21,13 @@ security:
             pattern: ^/api/token/refresh
             stateless: true
             refresh_jwt: ~
+
+
         login:
             pattern: ^/api/login
             stateless: true
             json_login:
-                check_path: /api/login
+                check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
