--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,8 @@
 api_login_check:
-  path: /api/login
+  path: /api/login_check
 gesdinet_jwt_refresh_token:
   path: /api/token/refresh
+
+authentication_token:
+    path: /authentication_token
+    methods: ['POST']
