--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@date-io/date-fns": "^2.13.1",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.4.2",
+        "@mui/lab": "^5.0.0-alpha.69",
         "@mui/material": "^5.4.2",
         "@mui/styles": "^5.4.2",
+        "axios": "^0.26.0",
+        "date-fns": "^2.28.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-autowhatever": "^10.2.1",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.27.1",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2"
     }
 }
