--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/material": "^5.4.2",
         "@mui/styles": "^5.4.2",
         "axios": "^0.26.0",
+        "bcrypt": "^5.0.1",
         "date-fns": "^2.28.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
